# opsplash

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  setup.py
cmake/: lodepng.cmake
include/: opsplash.h  opsplash_version.h.in
prebuilt/: opsplash-1.14-cp310-cp310-win_amd64.whl
src/: libopsplash.cpp  main.c  opsplash.c  opsplash.cpp  pyopsplash.c
